--- a/style.css
+++ b/style.css
@@ -1,12 +1,40 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+header img{
+    size: 100%;
+    z-index: -1;
+
+}
+
+.degrade{
+  width: 300px;
+  height: 200px;
+     background-color: transparent;
+    background-image: linear-gradient(180deg, #000000 15%, #00000000 100%);
+    position: absolute;
+    z-index: 1 ;
+}
+
+body{
+    background-color: #0C9AD8;
 }
 
 .container{
     align-items: center;
-    background-color:blueviolet;
-    margin: 60px;
-    color: rgb(0, 0, 0);
-    font-size: 60px;
+    margin: 10px;
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+
+  img {
+    height: auto;
+  }
+}
+
