--- a/style.css
+++ b/style.css
@@ -2,39 +2,60 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-header img{
-    size: 100%;
-    z-index: -1;
 
 }
+
+header {
+    background-image: url(./Imagem\ do\ WhatsApp\ de\ 2025-05-25\ à\(s\)\ 17.08.52_b06b9c13.jpg);
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    position: absolute;
+
+}
+
 
 .degrade{
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  height: 100px;
      background-color: transparent;
     background-image: linear-gradient(180deg, #000000 15%, #00000000 100%);
     position: absolute;
-    z-index: 1 ;
+    z-index: -1 ;
 }
 
 body{
     background-color: #0C9AD8;
+    align-items: center;
+    font-family: "Open Sans", sans-serif;
+    color: antiquewhite;
+
 }
 
-.container{
-    align-items: center;
-    margin: 10px;
+.navegador {
+    margin-top: 30px;
+    gap: 20px;
+    display: flex;
+    margin-left: 200px;
+
+}
+
+.rectangle {
+    background-color: darkblue;
+    height: 400px;
+    width: 90%;
+    margin-left: 30px;
+    margin-top: 700px;
+    display: flex;
+}
+
+.rectangle img {
+    border-radius: 50%;
 }
 
 @media (max-width: 768px) {
   body {
     font-size: 16px;
-  }
-
-  img {
-    height: auto;
   }
 }
 
