--- a/style.css
+++ b/style.css
@@ -2,60 +2,97 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
-header {
-    background-image: url(./Imagem\ do\ WhatsApp\ de\ 2025-05-25\ à\(s\)\ 17.08.52_b06b9c13.jpg);
-    width: 100%;
-    height: 100%;
-    z-index: -2;
-    position: absolute;
-
-}
-
-
-.degrade{
-  width: 100%;
-  height: 100px;
-     background-color: transparent;
-    background-image: linear-gradient(180deg, #000000 15%, #00000000 100%);
-    position: absolute;
-    z-index: -1 ;
-}
-
-body{
-    background-color: #0C9AD8;
-    align-items: center;
-    font-family: "Open Sans", sans-serif;
+body {
+    background-size: contain; 
+    background-color: #33A5CE;
+    font-family: "Open Sans", sans-serif; 
     color: antiquewhite;
-
 }
+
+html, body {
+    height: 100vh; 
+}
+
+
 
 .navegador {
-    margin-top: 30px;
+    display: flex;
+    justify-content: center;
     gap: 20px;
+    padding: 20px;
+    margin-top: 0%;
+    background-image: linear-gradient(180deg, #000000 15%, #ffd2d200 100%);
+    height: 100px;
+    color: antiquewhite;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+}
+
+
+img {
+    float:inline-start;
+}
+.background-container {
+    position: relative;
+    width: 100%;
+    height: 80vh; /* Define altura para a imagem */
     display: flex;
-    margin-left: 200px;
+    justify-content: center;
+}
+
+
+.background-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.background-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.conteudo .img_1 {
+    margin: 80px;
+    width: 500px;
+    height: auto;
+    position: absolute;
+    z-index: 1;
+    float:inline-start;
+    margin-top:120px ;
+}
+
+.conteudo .img_2 {
+     margin: 60px;
+    width: 530px;
+    height: auto;
+    position: absolute;
+    float: inline-start;
 
 }
 
-.rectangle {
-    background-color: darkblue;
-    height: 400px;
-    width: 90%;
-    margin-left: 30px;
-    margin-top: 700px;
-    display: flex;
+
+.conteudo p {
+    margin-top: 150px;
+    margin-left: 40%;
+    font-size: 32px;
+    position: absolute;
+    z-index: -1;
+
 }
 
-.rectangle img {
-    border-radius: 50%;
+.conteudo h1 {
+    margin-left: 40%;
+    margin-top: 100px;
+    z-index: -2;
+    position: absolute;
 }
 
-@media (max-width: 768px) {
-  body {
-    font-size: 16px;
-  }
-}
+
+
 
