--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,9 @@ body {
   color: #fff;
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
 }
-
 
 .navegador {
   background-image: linear-gradient(180deg, #000000 15%, transparent 100%);
