--- a/styles/mediaquery.css
+++ b/styles/mediaquery.css
@@ -44,18 +44,18 @@
   }
 
   .slideshow-container {
-    height: auto; /* Não força altura grande em telas pequenas */
+    height: auto;
     padding: 10px;
   }
 
   .slide > div {
-    flex-direction: column; /* Muda de linha: imagem em cima, texto embaixo */
+    flex-direction: column;
     align-items: center;
     text-align: center;
   }
 
   .slide img {
-    width: 90%; /* Ajusta imagem para caber na tela */
+    width: 90%;
   }
 
   .texto-slide {
@@ -125,7 +125,7 @@ h2 {
 
 
 .info-gallery img {
-  width: 120px;
+  width: 90px;
   height: auto;
 }
   }
